--- a/gb/24/8/8/n14307275.md
+++ b/gb/24/8/8/n14307275.md
@@ -114,7 +114,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306142.md#1">奥运第11日：美国队以2金优势 领跑金牌榜</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/13/n11255834.md#1" target="_blank">颜丹：日本作家村上春树新作引发的中国效应</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/26/n10667251.md#1" target="_blank">这些患绝症的精英们何以逢生（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/4/n9806020.md#1" target="_blank">刘晓：几置李锐于死地的“革命母亲”范元甄</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/20/n11397207.md#1" target="_blank">宗教与民主研究院主任：感谢法轮功坚持真理</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
